<resources>
    <string name="app_name">U-Money</string>
    <string name="wallet">Sổ giao dịch</string>
    <string name="report">Báo cáo</string>
    <string name="plan">Kế hoạch</string>
    <string name="user">Cá nhân</string>
    <string name="add_transaction">Thêm giao dịch</string>
    <string name="save">Lưu</string>
    <string name="select_group">Chọn nhóm</string>
    <string name="note">Ghi chú</string>
    <string name="today" translatable="false">Hôm nay</string>
    <string name="select_event">Chọn sự kiện</string>
    <string name="select_img">Chọn ảnh</string>
    <string name="planning">Lập kế hoạch</string>
    <string name="budget">Ngân sách</string>
    <string name="budget_description">Tạo ngân sách cho từng nhóm giao dịch, hoặc chung cho toàn bộ giao dịch</string>
    <string name="event">Sự kiện</string>
    <string name="event_description">Tạo sự kiện trong ứng dụng để theo dõi việc chi tiêu trong một sự kiện có thực nào đó, ví dụ như đi du lịch cuối tuần</string>
    <string name="bill">Hóa đơn</string>
    <string name="bill_description">Theo dõi các hóa đơn định kì sẽ được gửi đến như điện, nước, thuê nhà, internet, …</string>
    <string name="recurring_transaction">Giao dịch định kì</string>
    <string name="recurring_transaction_description">Các giao dịch định kì xảy ra trong tương lai sẽ được tự động thêm</string>
    <string name="transaction_name">Tên giao dịch</string>
    <string name="full_name">Họ và tên</string>
    <string name="init_value">0 VND</string>
    <string name="next">Tiếp tục</string>
    <string name="update">Cập nhật</string>
    <string name="this_week_from_to">Tuần này (%1$s - %2$s)</string>
    <string name="this_month_from_to">Tháng này (%1$s - %2$s)</string>
    <string name="this_year_from_to">Năm này (%1$s - %2$s)</string>
    <string name="add_budget_successfully">Thêm ngân sách thành công</string>
    <string name="add_budget_failed">Thêm ngân sách thất bại</string>
    <string name="loop_daily">Lặp lại hàng ngày</string>
    <string name="loop_weekly">Lặp lại hàng tuần</string>
    <string name="loop_monthly">Lặp lại hàng tháng</string>
    <string name="loop_yearly">Lặp lại hàng năm</string>
    <string name="from">Từ</string>
    <string name="every">Mỗi</string>
    <string name="day">ngày</string>
    <string name="week">tuần</string>
    <string name="month">tháng</string>
    <string name="year">năm</string>
    <string name="forever">Mãi mãi</string>
    <string name="to_date">Cho đến ngày</string>
    <string name="specific_number_of_times">Xảy ra số lần cụ thể</string>
    <string name="_1">1</string>
    <string name="this_week">Tuần này</string>
    <string name="this_month">Tháng này</string>
    <string name="this_year">Năm này</string>
    <string name="times">lần</string>
</resources>