<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailTransaction_layout">

    <data>

        <import type="android.view.View" />

        <variable
            name="transaction"
            type="com.itus.u_money.model.Transaction" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.DetailTransactionActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/add_transaction"
                android:textColor="@color/colorWhite"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:onClick="onSaveClick"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:id="@+id/btnSave"/>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/colorTransparency"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_35_svg" />

                    <EditText
                        android:id="@+id/edt_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/colorGrayDarker"
                        android:hint="0 Dong"
                        android:inputType="numberDecimal"
                        android:text="@{transaction.amount.toString()}"
                        android:textColor="@color/colorBlue"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="selectGroup"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/img_select_group"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@color/colorTransparency"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_question" />

                    <TextView
                        android:id="@+id/text_type_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:text="@string/select_group"
                        android:textColor="@color/colorBlackLight"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@color/colorTransparency"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_notepad" />

                    <EditText
                        android:id="@+id/edt_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/colorGrayDarker"
                        android:hint="@string/note"
                        android:text="@{transaction.note}"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="selectDate"
                    android:orientation="horizontal"
                    android:id="@+id/date_picker_actions">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@color/colorTransparency"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_56_svg" />

                    <TextView
                        android:id="@+id/edt_date"
                        bindDate="@{transaction.date}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/colorGrayDarker"
                        android:clickable="false"
                        android:paddingVertical="8dp"
                        android:text="@string/today"
                        android:textColor="@color/colorBlackLight"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="selectEvent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@color/colorTransparency"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_1_svg" />

                    <TextView
                        android:id="@+id/edt_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/colorGrayDarker"
                        android:paddingVertical="8dp"
                        android:text="@string/select_event"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:onClick="selectImage"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:background="@color/colorTransparency"
                        android:onClick="selectImage"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_photo" />

                    <TextView
                        android:id="@+id/text_select_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:backgroundTint="@color/colorGrayDarker"
                        android:paddingVertical="8dp"
                        android:text="@string/select_img"
                        android:textSize="20sp"
                        android:visibility="@{transaction.imagePath!=null?View.GONE:View.VISIBLE}" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_img_selected"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:elevation="10dp"
                        android:visibility="@{transaction.imagePath!=null?View.VISIBLE:View.GONE}"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/image_selected"
                            bindImage="@{transaction.imagePath}"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ubuntu" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
